Random fixes
Remove adjacent equal items in undo/redo stack.
Fix exception message in Image.java to provide correct information.
Make a few methods private in DBComboBox2.
Rename SSCommon pendingDbChange to skipValidateHasError
TestBaseComponents: add 2nd text field, some cleanup.
Add tests to ConvertTypeTest for conversion to/from BIT/BOOLEAN.